fix overflow

--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -5,3 +5,8 @@
 h2, h4 {
 	margin-left: 20px;
 }
+
+.demo {
+	margin: 0 auto;
+	width: 750px;
+}
